fixed layout issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,6 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  min-height:630px;
 }
 
 a {
@@ -107,7 +108,7 @@ p.now-playing{
   -webkit-border-radius: 10px;
   -khtml-border-radius: 10px;
   border-radius: 10px;
-  position:absolute;
+  position:relative;
   top:0;
   right:20px;
   height:70px;
@@ -181,6 +182,14 @@ p.inline{
   left:5px;
   margin-bottom:10px
 }
+#invite-others-btn{
+  margin-right:30px;
+}
+.share-box{
+  width:100%;
+  padding-left:-5px;
+  padding-right:-5px;
+}
 
 /*
  * Base structure
@@ -208,10 +217,15 @@ body {
 .site-wrapper-inner {
   display: table-cell;
   vertical-align: top;
+  height:100%;
+  width:100%;
 }
 .cover-container {
   margin-right: auto;
   margin-left: auto;
+  height:100%;
+  width:100%;
+  position:relative;
 }
 
 /* Padding for spacing */
@@ -285,6 +299,12 @@ body {
 .mastfoot {
   color: #999; /* IE8 proofing */
   color: rgba(255,255,255,.5);
+  position: absolute;
+  bottom:0;
+  text-align:center;
+  width:100%;
+  left:0;
+  /*margin-top:20px;*/
 }
 
 
@@ -294,7 +314,7 @@ body {
 
 @media (min-width: 768px) {
   .mastfoot {
-    position: fixed;
+    position: absolute;
     bottom: 0;
   }
   /* Start the vertical centering */
@@ -332,7 +352,7 @@ body {
   .site-wrapper{
     top: 0;
     right: 0;
-    position: absolute;
+    /*position: absolute;*/
   }
 
   #current-song-icon{
